<resources>
    <string name="app_name">jsPos</string>
    <string name="title_home">收银交易</string>
    <string name="title_dashboard">记录查询</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_settings">设置</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_branch_selection">门店编号</string>
    <string name="branch_name">门店名称</string>
    <string-array name="pref_branch_list_name">
        <item>乐之广州店</item>
        <item>乐之上海店</item>
        <item>乐之天津店</item>
    </string-array>
    <string-array name="pref_branch_list_code">
        <item>01001</item>
        <item>01002</item>
        <item>01005</item>
    </string-array>
    <string name="pref_printer_times">小票打印联数</string>
    <string-array name="pref_printer_times_name">
        <item>打印1联</item>
        <item>打印2联</item>
        <item>打印3联</item>
        <item>打印4联</item>
        <item>打印5联</item>
    </string-array>
    <string-array name="pref_printer_times_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="pref_pos_selection">POS机台号</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_pos">POS</string>
    <string name="title_uploadtranscation">上传交易资料</string>
    <string name="checknetwork">检查网络状态</string>
    <string name="local_tools">本地工具</string>
    <string name="local_data">本地数据</string>
    <string name="general_setting">通用设定</string>
    <string name="Sync_data">后台工具</string>
    <string name="device_number_id">设备号</string>
    <string name="Upgrade_version">版本更新</string>
    <string name="local_printer">打印机设置</string>
    <string name="title_BlueToothSetting">设置打印机</string>
    <string name="setting_printer_blue_tooth_button">设置蓝牙打印机</string>
    <string name="testing_printer">打印测试</string>
    <string name="Printer_Display_name">预设打印机</string>
    <string name="Printer_setting_address">预设打印机地址</string>
    <string name="up_localdatabase">升级本地数据库</string>
    <string name="IsNeedPrint">打印小票</string>
    <string name="IsNeedQRCode">打印电子发票二维码</string>
    <string name="checkdes64">加密检查</string>
    <string name="printer_setting">打印设定</string>
    <string name="report_data_info">数据查看</string>
    <string name="pre_personal_info">个人中心</string>
    <string name="personal_login">登陆</string>
    <string name="db_down_template">下载数据库到本地</string>
    <string name="will_delete_all_sales">此操作会清除本地交易</string>
    <string name="setting_connect">参数配置</string>
    <string-array name="Setting_Channel">
        <item>数据库服务器设定</item>
        <item>升级服务器设定</item>
        <item>ftp服务器设定</item>
    </string-array>
    <string-array name="Front_check_Channel">
        <item>盘点操作</item>
        <item>盘点明细</item>
        <item>盘点设定</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Setting_ToolBars">参数设置</string>
    <string name="labe_db_ip">数据库地址：</string>
    <string name="setting_db_name">数据库名称:</string>
    <string name="lable_setting_db_connect_user">连接账号:</string>
    <string name="setting_db_connect_pwd">连接密码:</string>
    <string name="setting_ftp_ip">FTP服务器地址:</string>
    <string name="label_setting_ftp_user">FTP账号:</string>
    <string name="label_setting_ftp_pwd">FTP密码:</string>
    <string name="label_settting_http_ip">升级服务器地址:</string>
    <string name="setting_http_qr_url_lable">电子发票前置地址:</string>
    <string name="title_activity_front_check">FrontCheck</string>
    <string name="menu_sync_set">数据同步</string>
    <string name="menu_front_check">盘点作业</string>
</resources>