<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="personal.wl.jspos.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/general_setting" />
    <header
        android:fragment="personal.wl.jspos.SettingsActivity$PrinterPreferenceFragment"
        android:icon="@drawable/ic_print_black_24dp"
        android:title="@string/printer_setting" />

    <header
        android:fragment="personal.wl.jspos.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_build_black_24dp"
        android:title="@string/Sync_data" />
    <header
        android:fragment="personal.wl.jspos.SettingsActivity$ReportDataPreferenceFragment"
        android:icon="@drawable/ic_desktop_mac_black_24dp"
        android:title="@string/report_data_info" />
    <header
        android:fragment="personal.wl.jspos.SettingsActivity$PesonPreferenceFragment"
        android:icon="@drawable/ic_person_outline_black_24dp"
        android:title="@string/pre_personal_info" />



</preference-headers>
