<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <ListPreference
        android:defaultValue="00000"
        android:entries="@array/pref_branch_list_name"
        android:entryValues="@array/pref_branch_list_code"
        android:key="branch_selected"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_branch_selection"/>


    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:defaultValue="000"
        android:key="pos_machine"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_pos_selection" />




</PreferenceScreen>
