<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Config.Fragments.SettingDB">

    <!-- TODO: Update blank fragment layout -->
    <!--android:background="@drawable/shape_bgimg"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"

                android:background="@drawable/button_decoration"
                android:text="@string/labe_db_ip"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/setting_db_ip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType=""
                android:textColor="#ea302e"
                android:text="" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_decoration"
                android:text="@string/setting_db_name"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/setting_db_connect_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textColor="#ea302e"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"

                android:background="@drawable/button_decoration"
                android:text="@string/lable_setting_db_connect_user"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/setting_db_connect_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#ea302e"
                android:text="" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_decoration"
                android:text="@string/setting_db_connect_pwd"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/setting_db_connect_pwd"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="#ea302e"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="确认"
            android:background="@drawable/button_decoration"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_weight="1"
            android:id="@+id/bt_dbNeedSave"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:id="@+id/setting_db_conect_test"
            android:text="连接测试"
            android:background="@drawable/button_decoration"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_weight="1">

        </Button>

    </LinearLayout>

    </LinearLayout>
</FrameLayout>
